--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,27 @@
+kafka:
+   image: spotify/kafka
+   container_name: kafka
+   environment:
+      ADVERTISED_HOST: kafka
+      ADVERTISED_PORT: 9092
+   hostname: kafka
+   
+es:
+   image: elasticsearch:2.0
+   container_name: es
+   ports:
+      - "9200:9200"
+
+batch:
+   image: tp33/django
+   container_name: batch
+   volumes:
+      - ./p3_exp_service:/app
+   links:
+      - kafka:kafka
+      - es:es
+   command: bash -c "python ./batch.py"
+
 models:
   image: tp33/django
   container_name: models
@@ -7,13 +31,15 @@ models:
     - ./app:/app
   ports:
     - "8001:8000"
-  command: bash -c "mod_wsgi-express start-server --working-directory /app/foo --reload-on-changes /app/foo/foo/wsgi.py"
+  command: bash -c "python ./foo/manage.py flush --noinput && python ./foo/manage.py migrate && python ./foo/manage.py loaddata db.json && mod_wsgi-express start-server --working-directory ./foo --reload-on-changes ./foo/foo/wsgi.py"
 
 exp:
   image: tp33/django
   container_name: exp
   links:
     - models:models-api
+    - kafka:kafka
+    - es:es
   ports:
     - "8002:8000"
   volumes:
